--- a/includes/header.html
+++ b/includes/header.html
@@ -1,10 +1,115 @@
-<! DOCTYPE HTML>
+<!DOCTYPE html>
+ 
 <html lang= "en">
 	<head>
-		 <meta content="utf-8" http-equiv="encoding">
+		<meta charset="UTF-8">
 		<title><?php echo $page_title;?></title>
-		<link rel="stylesheet" href= "includes/style.css">
+		<link rel="stylesheet" href= "siteStyle.css">
+                <link rel="stylesheet" href= "anythingSlider/anythingslider.css">
+                <link rel="stylesheet" href= "jquery.fancybox-1.3.4.css">
+                <script type="text/javascript" src="_js/jquery-1.7.2.min.js"></script>
+                <script type="text/javascript" src="_js/jquery.easing.1.3.js"></script>
+                <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.js"></script>
+                <script type="text/javascript" src="_js/nav1.1.min.js"></script>
+                <script type="text/javascript" src="anythingSlider/jquery.anythingslider.min.js"> </script>
+                <script type="text/javascript" src="_js/jquery.validate.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+ $("#nav").navPlugin({
+   'itemWidth': 150,
+   'itemHeight': 30,
+   'navEffect': "slide",
+   'speed': 250
+ });//end navPlugin
+
+        //end click*/
+
+$(function(){
+$('.header').anythingSlider({
+autoPlay:true
+});//end function
+});//end slider
+$(function(){
+    $('#register_form').validate({
+        rules:{
+            fname:{
+               required:true,
+               },
+               lname:{
+                required:true,
+                    },
+            email:{
+                required:true,
+                email:false},
+                        
+        pass1:{
+            required:true
+            //rangeLength:(5,16)
+            },
+            pass2:{equalTo:'#pass1'}
+        },//end rules
+        messages:{
+            fname:{
+                required:"Enter your firstname."
+                //text:"Must be alphabetic characters (A-Z or a-z)."
+            },
+             lname:{
+                required:"Enter your lastname."
+                //text:"Must be alphabetic characters (A-Z or a-z)."
+            },
+            pass1:{
+                required:"Enter a password.",
+                rangeLength:"Must be between 5 and 16 characters inLenght."
+            },
+            pass2:{equalTo:"The passwords provided do not match."
+                
+            }
+            
+        }
+    });//end validate
+ });//end function
+
+$(function(){
+    $('#loginForm').validate({
+        rules:{
+            email:{
+                    required:true,
+                    email:false
+        },
+        pass:{
+            required:true
+            }
+        },//end rules
+        messages:{
+            email:{
+                required:"Please provide an email address."
+            },
+            pass:{
+                required:"Enter a password."
+            }
+            
+        }
+    });//end validate
+ });//end function
+$('.iframe').click(function() {
+ var winProps='height=600,width=600,resizable=yes,scrollbars=yes, toolbar=no,menubar=no, location=no';
+ var newWin=open($(this).attr('href'),'aWin',winProps);
+ newWin.focus();
+ return false;
+});//end click
+
+    $('.closePop').click(function() {
+        window.opener.location.reload(true);
+         window.close();
+    });
+
+  $('.header').fancybox();
+ }); // end ready
+
+
+</script>
+
 	</head>
 	<body>
-		<header><h1>Page Header</h1></header>
+
 
